@@ -2,6 +2,7 @@ lilv (UNRELEASED) unstable; urgency=low
 
   * Use path variables in pkgconfig files
   * Install man page to DATADIR (e.g. PREFIX/share/man, not PREFIX/man)
+  * Make Lilv::uri_to_path static inline (fix linking errors)
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
